bookinfo/platform/kube/bookinfo-ratings-v2-mysql.yaml
---
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
    name: ratings-v2-mysql
    labels:
        app: ratings
        version: v2-mysql
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ratings
            version: v2-mysql
    template:
        metadata:
            labels:
                app: ratings
                version: v2-mysql
        spec:
            containers:
                - name: ratings
                  image: docker.io/istio/examples-bookinfo-ratings-v2:1.16.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 9080
                  securityContext:
                      runAsUser: 1000
---
...
