bookinfo/platform/kube/bookinfo-ratings-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ratings-v2
    labels:
        app: ratings
        version: v2
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ratings
            version: v2
    template:
        metadata:
            labels:
                app: ratings
                version: v2
        spec:
            serviceAccountName: bookinfo-ratings-v2
            containers:
                - name: ratings
                  image: docker.io/istio/examples-bookinfo-ratings-v2:1.16.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 9080
                  securityContext:
                      runAsUser: 1000
---
...
