bookinfo/platform/kube/bookinfo-reviews-v2.yaml
---
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Reviews service v2
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
    name: reviews-v2
    labels:
        app: reviews
        version: v2
spec:
    replicas: 1
    selector:
        matchLabels:
            app: reviews
            version: v2
    template:
        metadata:
            labels:
                app: reviews
                version: v2
        spec:
            containers:
                - name: reviews
                  image: docker.io/istio/examples-bookinfo-reviews-v2:1.16.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 9080
                  volumeMounts:
                      - name: tmp
                        mountPath: /tmp
                      - name: wlp-output
                        mountPath: /opt/ibm/wlp/output
                  securityContext:
                      runAsUser: 1000
            volumes:
                - name: wlp-output
                  emptyDir: {}
                - name: tmp
                  emptyDir: {}
---
...
