bookinfo/platform/kube/bookinfo-db.yaml
---
# Copyright Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

apiVersion: v1
kind: Service
metadata:
    name: mongodb
    labels:
        app: mongodb
        service: mongodb
spec:
    ports:
        - port: 27017
          name: mongo
    selector:
        app: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mongodb-v1
    labels:
        app: mongodb
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mongodb
            version: v1
    template:
        metadata:
            labels:
                app: mongodb
                version: v1
        spec:
            containers:
                - name: mongodb
                  image: docker.io/istio/examples-bookinfo-mongodb:1.16.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 27017
                  volumeMounts:
                      - name: data-db
                        mountPath: /data/db
            volumes:
                - name: data-db
                  emptyDir: {}
---
...
