bookinfo/platform/kube/bookinfo-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: mysqldb
    labels:
        app: mysqldb
        service: mysqldb
spec:
    ports:
        - port: 3306
          name: tcp
    selector:
        app: mysqldb
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysqldb-v1
    labels:
        app: mysqldb
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mysqldb
            version: v1
    template:
        metadata:
            labels:
                app: mysqldb
                version: v1
        spec:
            containers:
                - name: mysqldb
                  image: docker.io/istio/examples-bookinfo-mysqldb:1.16.2
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 3306
                  args: [--default-authentication-plugin, mysql_native_password]
                  volumeMounts:
                      - name: var-lib-mysql
                        mountPath: /var/lib/mysql
            volumes:
                - name: var-lib-mysql
                  emptyDir: {}
---
...
